--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ main .slike .carousel-item::before{
     opacity: 0.8;
 }
 main .slike .carousel-caption {
-    align: center;
+    text-align: center;
     bottom: 115px;
 }
 
@@ -169,9 +169,10 @@ main .najpopularnije, .najnovije, .nasa-ponuda {
 
 main .card {
   align-items: center;
-  margin: 0 .5em;
+  margin: 0 0.5em 0 0.6em;
   width: calc(100%/3.5);
-  overflow-y: scroll;
+  box-shadow: 5px 5px  #7F6859;
+
 }
 main .card .card-body .btn {
   background-color: #7F6859;
@@ -274,3 +275,12 @@ footer h4 {
   margin: 10px;
 }
 
+footer ul li a:visited {
+  color:#7F6859
+}
+footer ul li a {
+  color: #EAE5DB;
+}
+footer ul li a:hover {
+  color:#B7AB9F;
+}
